name:                acme-box
version:             0.0.0.0
synopsis:            A full featured empty project
description:         A full featured empty project
homepage:            http://github.com/drwebb/acme-box
license:             BSD3
license-file:        LICENSE
author:              Tristan Webb
maintainer:          tristanwebb@fpcomplete.com
category:            Acme
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Acme.Box
  build-depends:       base
  default-language:    Haskell98

executable acme-box
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base <= 5
                     , acme-box
  default-language:    Haskell98

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , acme-box
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell98

source-repository head
  type:     git
  location: https://github.com/drwebb/acme-box